--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,13 @@
 .code-body{
-  /* background-color: #d4d0ff !important; */
-  background: linear-gradient(#D4D0FF,#D4D0FF, #E0FFDB);
-}
-.App-header{
-  background-color: #d4d0ff !important;
+  /* background-color: #8815b7 !important; */
+  background: linear-gradient(#8815b7,#8815b7, #E0FFDB);
 }
 .adm-notice-bar.adm-notice-bar-alert {
   --background-color: #f5fbf9;
   --border-color: #f5fbf9;
 }
 .adm-notice-bar-content {
-  color: #727272 !important;
+  color: #fff !important;
 }
 .withdraw-info-head{
   color: #727272 !important;
@@ -29,84 +26,96 @@
   border-left: 1px solid #727272;
   border-bottom: 1px solid #727272;
 }
+.adm-button.adm-button-small {
+  font-size:15px;
+  padding-bottom:3px;
+  padding-top:3px;
+  color: #fff;
+}
 .adm-button.adm-button-large{
-  background-color: #d4d0ff !important;
-  border-color: #d4d0ff !important;
+  background: #8815b7 !important;
+  border-color: unset !important;
+  color: #fff !important;
 }
 .k3-name-list-button-active{
-  background-color: #d4d0ff !important;
-  border-color: #d4d0ff !important;
+  background-color: #8815b7 !important;
+  border-color: #8815b7 !important;
+  color: #fff !important;
 }
 .touzhu-button-left button{
-  border-color: #d4d0ff !important;
+  border-color: #8815b7 !important;
   background-color: #fff !important;
+  color: #8815b7 !important;
 }
 .touzhu-button-right button{
-  border-color: #d4d0ff !important;
-  background-color: #d4d0ff !important;
+  border-color: #8815b7 !important;
+  background-color: #8815b7 !important;
+  color: #fff !important;
 }
 .adm-tabs-tab-line{
-  background: #d4d0ff !important;
+  background: #8815b7 !important;
 }
 .hz-card-activity{
-  background: #d4d0ff !important;
+  background: #8815b7 !important;
 }
-.user-info{
-  background: #d4d0ff !important;
-}
+
 .history-button{
-  border-color: #d4d0ff !important;
-  background-color: #d4d0ff !important;
+  border-color: #8815b7 !important;
+  background-color: #8815b7 !important;
+  color: #fff !important;
 }
 .user-button-logout button{
-  border-color: #d4d0ff !important;
-  background-color: #d4d0ff !important;
+  border-color: #8815b7 !important;
+  background-color: #8815b7 !important;
+  color: #fff !important;
 }
 .ks-alert-body button{
-  border-color: #d4d0ff !important;
-  background-color: #d4d0ff !important;
+  border-color: #8815b7 !important;
+  background-color: #8815b7 !important;
+  color: #fff !important;
 }
 .home-game-left{
-  background: #d4d0ff !important;
+  background: #8815b7 !important;
 }
 
 .adm-checkbox.adm-checkbox-checked .adm-checkbox-icon {
-  border-color: #d4d0ff !important;
-  background-color: #d4d0ff !important;
-  border: 1px solid #d4d0ff !important;
+  border-color: #e6048d !important;
+  background-color: #e6048d !important;
+  border: 1px solid #e6048d !important;
+  color: #fff !important;
 }
 .withdraw-info {
-  border-top: 1px solid #d4d0ff !important;
-  border-right: 1px solid #d4d0ff !important;
+  border-top: 1px solid #8815b7 !important;
+  border-right: 1px solid #8815b7 !important;
 }
 .withdraw-info-value {
-  border-left: 1px solid #d4d0ff !important;
-  border-bottom: 1px solid #d4d0ff !important;
+  border-left: 1px solid #8815b7 !important;
+  border-bottom: 1px solid #8815b7 !important;
 }
 .withdraw-info-key {
-  border-left: 1px solid #d4d0ff !important;
-  border-bottom: 1px solid #d4d0ff !important;
+  border-left: 1px solid #8815b7 !important;
+  border-bottom: 1px solid #8815b7 !important;
 }
 .proxy-info {
-  border-top: 1px solid #d4d0ff !important;
-  border-right: 1px solid #d4d0ff !important;
+  border-top: 1px solid #8815b7 !important;
+  border-right: 1px solid #8815b7 !important;
 }
 .proxy-value {
-  border-left: 1px solid #d4d0ff !important;
-  border-bottom: 1px solid #d4d0ff !important;
+  border-left: 1px solid #8815b7 !important;
+  border-bottom: 1px solid #8815b7 !important;
 }
 .proxy-key {
-  border-left: 1px solid #d4d0ff !important;
-  border-bottom: 1px solid #d4d0ff !important;
+  border-left: 1px solid #8815b7 !important;
+  border-bottom: 1px solid #8815b7 !important;
 }
 .proxy-member-info {
-  border-top: 1px solid #d4d0ff !important;
-  border-right: 1px solid #d4d0ff !important;
+  border-top: 1px solid #8815b7 !important;
+  border-right: 1px solid #8815b7 !important;
 }
 
 .user-button g{
-  color: #d4d0ff !important;
+  color: #fff !important;
 }
 .user-vip{
-  background: linear-gradient(45deg,#f8c661,#d4d0ff) !important;
+  background: linear-gradient(45deg,#f8c661,#8815b7) !important;
 }
