l29,解决电影名称太长影响样式问题

--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -195,6 +195,9 @@
 	width: fit-content;
 
 	color: #fff;
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
 	/* font-weight: 700; */
 }
