--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -189,9 +189,9 @@
 }
 .dy-type{
 	font-size: 16px;
-  color: #16ba63;
+  color: #000;
   margin: 20px 0;
 	font-weight: bold;
-	border-color: #85daae;
+	border-color: #1979ff;
 	padding: 0 50px;
 }
