--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,8 @@
   font-size:15px;
   padding-bottom:3px;
   padding-top:3px;
+  padding-left: 6px;
+  padding-right: 6px;
   color: #fff;
 }
 .adm-button.adm-button-large{
