--- a/src/page/home/index.css
+++ b/src/page/home/index.css
@@ -8,7 +8,7 @@
 	border-radius: 10px;
 }
 .home-menu {
-	margin-top: -40px;
+	margin-top: -36px;
 	padding-top: 70px;
 
 	position: relative;
@@ -261,7 +261,7 @@
   background-size: 100% 100%;
   color: #fff;
  
-  padding-bottom: calc(5vh + 10px);
+  padding-bottom: calc(5vh - 10px);
   min-height: 150px;
   margin-left: 10px;
   margin-right: 10px;
