update user vip logo

--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,6 @@
 .user-button g{
   color: #fff !important;
 }
-.user-vip{
+/* .user-vip{
   background: linear-gradient(45deg,#f8c661,#8815B8) !important;
-}
+} */
