--- a/src/page/user/index.css
+++ b/src/page/user/index.css
@@ -1,12 +1,10 @@
 .user-info{
     --border-top: 0px;
     overflow:hidden;
-
     color:#fff;
     display: flex;
-    flex-direction: column;
     align-items:flex-start;
-    justify-content: flex-start;
+    justify-content: space-between;
     margin: 10px;
     padding: 10px;
     background:url('../../../public/assets/bgHeaderUser.png') no-repeat 100% 100%;
@@ -19,8 +17,7 @@
 }
 .user-data{
     display: flex;
-    align-items: flex-start;
-    
+    justify-content: space-between;
 }
 .user-button{
     min-width: 200px;
@@ -52,22 +49,29 @@
 
 .user-vip{
     overflow:hidden;
-    margin-top: 18px;
-    float:right;
+     margin-top: 18px;
+     position: relative;
+ /* float:right;
     font-size: 14px;
     background: linear-gradient(45deg,#f8c661,#f4635e);
     width: 100px;
     border-bottom-left-radius: 15px;
     border-top-left-radius: 15px;
     height: 30px;
-    line-height: 30px;
+    line-height: 30px; */
 }
 .user-vip-img{
-    float: left;
+    position: relative;
+/*  float: left; */
 }
 .user-vip-txt{
-    float: left;
-    margin-left: 10px;
+    position: absolute;
+    top: 2px;
+    right: 5px;
+    font-weight: 600;
+    font-size: 17px;
+    width: 18px;
+    text-align: center;
 }
 .user-button{
     text-align: center;
