--- a/src/page/user/index.css
+++ b/src/page/user/index.css
@@ -95,7 +95,7 @@
 
 .user-button-list{
     margin: 10px 10px 20px;
-    color: #fff;
+    color: #000;
 
     text-align: center;
     padding: 20px 10px;
