--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
   --border-color: #f5fbf9;
 }
 .adm-notice-bar-content {
-  color: #fff !important;
+  color: #555555 !important;
 }
 .withdraw-info-head{
   color: #727272 !important;
