--- a/src/page/user/bank/index.css
+++ b/src/page/user/bank/index.css
@@ -29,3 +29,8 @@
 .prefix-width .adm-list-item-content-prefix{
     --prefix-width:4.6em
 }
+#text{
+    padding-left: 1.2rem;
+    line-height: 60px;
+    font-size: 16px;
+}
